# 26a-emb-aps-1-fguiro

./: CMakeLists.txt  Raspberry Pi Pico PWM Wave File Converter.ipynb
audio/: audio.c
main/: CMakeLists.txt  ganhou.h  main copy.c  main.c  main2.c  perdeu.h  pinos.h  play.h  tom_amarelo.h  tom_azul.h  tom_verde.h  tom_vermelho.h
tft_lcd_ili9341/: CMakeLists.txt
tft_lcd_ili9341/gfx/: CMakeLists.txt
